# claws-mail-indicator

./: .gitignore  LICENSE  TODO  autogen.sh  configure.ac  index.html
debian/: changelog  control  copyright  get-claws-version.sh  rules
po/: POTFILES.in  claws-mail-indicator.pot  pl.po
src/: Makefile.am  claws-mail-indicator-prefs.c  claws-mail-indicator-prefs.h  claws-mail-indicator.c  claws-mail-version.c  claws-mail-version.h
